# absolutecinema/internal/openapi/schema/user.yaml
@@ -3,7 +3,7 @@ info:
   title: User API
   version: 1.0.0
 paths:
-  /users:
+  /users/list:
     get:
       summary: List users
       responses:
@@ -15,6 +15,45 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/User"
+
+  /users/register:
+    post:
+      summary: Register a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateUserInput"
+      responses:
+        "201":
+          description: User created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserOutput"
+        "400":
+          description: Bad request
+
+  /users/login:
+    post:
+      summary: Log in an existing user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginUserInput"
+      responses:
+        "200":
+          description: Authenticated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
+        "401":
+          description: Unauthorized
+
 components:
   schemas:
     User:
@@ -30,4 +69,58 @@ components:
         name:
           type: string
         email:
+          type: string
+
+    CreateUserInput:
+      type: object
+      required:
+        - name
+        - email
+        - password
+        - confirmPassword
+      properties:
+        name:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+          format: password
+        confirmPassword:
+          type: string
+          format: password
+
+    LoginUserInput:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+          format: password
+
+    UserOutput:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          x-go-type: googleuuid.UUID
+          x-go-type-import:
+            path: github.com/google/uuid
+            name: googleuuid
+        name:
+          type: string
+        email:
+          type: string
+        role:
+          type: string
+
+    LoginResponse:
+      type: object
+      properties:
+        token:
           type: string
